--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.5.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-form-with-constraints": "^0.10.0",
+    "react-redux": "^5.1.1",
+    "react-scripts": "2.1.1",
+    "react-validation": "^3.0.7",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2",
+    "simple-react-validator": "^1.0.0",
+    "typeface-roboto": "0.0.54",
+    "validator": "^10.9.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3030 &&react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
